# esp32p4-rpi-camera-telemetry

./: .gitignore  APPLICATION.md  CMakeLists.txt  README.md  flashing_steps.md  ota_tcp_upload.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.pre_v3  sdkconfig.defaults.slave2  supabase_client.py  tcp_master.py  tcp_receiver.py  tcp_supabase_uploader.py
components/mlx90640/: CMakeLists.txt  MLX90640_I2C_Driver.c
components/mlx90640/include/: MLX90640_I2C_Driver.h
extra_code/: ota_tcp_server.c  ota_tcp_server.h  ota_tcp_upload.py  partitions.csv  supabase.py
main/: CMakeLists.txt  Kconfig.projbuild  freertos_tasks_main.c  idf_component.yml  rpi_camera_config.h  rpi_camera_control.c  rpi_camera_control.h  rpi_camera_control_packet.h  rpi_camera_ctrl_server.c  rpi_camera_ctrl_server.h  rpi_camera_eth.c  rpi_camera_health.c  rpi_camera_health.h  rpi_camera_main.c  rpi_camera_net.h  rpi_camera_ota.c  rpi_camera_ota.h  rpi_camera_packet.h  rpi_camera_spool.c  rpi_camera_spool.h  rpi_camera_tcp.c  rpi_camera_tcp.h  rpi_camera_thermal.c  rpi_camera_thermal.h  rpi_sensor.c  rpi_sensor.h
